...

            android:textAlignment="center"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/enternumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:background="@drawable/edit_text_background"
...
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/trythisbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorPrimaryDark"
...
